# regesta-assessment

./: .editorconfig  .env-example  .gitignore  README.md  create_test_db.sh  db-schema.sql  db-test-data.sql  demo.webm  pyproject.toml
.github/workflows/: ci.yml
src/regesta_assessment/: __main__.py  app_keys.py  routes.py  tables.py
src/regesta_assessment/static/: main.css
src/regesta_assessment/templates/: base.html  index.html  results.html
tests/: conftest.py  create_test_db.sh  test_prices.py
